[metadata]
name = paprikasync
version = 0.1-dev
license = MIT
description = A tool to sync paprikaapp recipes between accounts

[options]
packages = find:
python_requires = >= 3.8
install_requires =
  appdirs
  click
  dataclasses-json
  requests

[options.extras_require]
dev =
  black
  flake8

[options.entry_points]
console_scripts =
  paprikasync = paprikasync.cli:cli

[flake8]
max-line-length = 88
