[metadata]
name = paprikasync
version = 0.1-dev
license = MIT
description = A tool to sync paprikaapp recipes between accounts

[options]
packages = find:
python_requires = >= 3.8
install_requires =
  appdirs
  click
  dataclasses-json
  requests
  flask
  flask-sqlalchemy
  flask-marshmallow[sqlalchemy]
  sqlalchemy[postgresql]
  sqlalchemy-utils[password]
  passlib[argon2]
  webargs

[options.extras_require]
dev =
  black
  flake8
  flask_url_map_serializer
  python-dotenv
  ipython
  flask-shell-ipython

[options.entry_points]
console_scripts =
  paprikasync = paprikasync.cli:cli

[flake8]
max-line-length = 88
